WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 86087
[chromium] MediaStream API: Fix the ExtraData functionality in WebMediaStreamDescriptor
https://bugs.webkit.org/show_bug.cgi?id=86087
Summary
[chromium] MediaStream API: Fix the ExtraData functionality in WebMediaStream...
Tommy Widenflycht
Reported
2012-05-10 05:12:32 PDT
Adding a missing adoptRef call. Adding code that exercises this to WebUserMediaClientMock.
Attachments
Patch
(3.58 KB, patch)
2012-05-10 05:18 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-05-10 05:18:18 PDT
Created
attachment 141149
[details]
Patch
Adam Barth
Comment 2
2012-05-10 11:40:08 PDT
Comment on
attachment 141149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141149&action=review
> Source/WebCore/ChangeLog:8 > + Not easy to test but I have added code that excercises this to WebUserMediaClientMock (in DumpRenderTree).
You should be able to test it with a unit test.
http://trac.webkit.org/browser/trunk/Source/WebKit/chromium/tests
WebKit Review Bot
Comment 3
2012-05-10 12:10:33 PDT
Comment on
attachment 141149
[details]
Patch Clearing flags on attachment: 141149 Committed
r116674
: <
http://trac.webkit.org/changeset/116674
>
WebKit Review Bot
Comment 4
2012-05-10 12:10:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug