[chromium] MediaStream API: Fix the ExtraData functionality in WebMediaStreamDescriptor https://bugs.webkit.org/show_bug.cgi?id=86087

Reviewed by Adam Barth.

Source/WebCore:

Not easy to test but I have added code that excercises this to WebUserMediaClientMock (in DumpRenderTree).

* platform/chromium/support/WebMediaStreamDescriptor.cpp:
(WebKit::WebMediaStreamDescriptor::setExtraData):

Tools:

* DumpRenderTree/chromium/WebUserMediaClientMock.cpp:
(MockExtraData):
(WebKit):
(WebKit::WebUserMediaClientMock::requestUserMedia):


Canonical link: https://commits.webkit.org/103715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116674 268f45cc-cd09-0410-ab3c-d52691b4dbfc